--- a/PrivateMail/Cells/SettingsTableViewCell.xib
+++ b/PrivateMail/Cells/SettingsTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14865.1" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14819.2"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -39,13 +39,21 @@
                             <constraint firstAttribute="height" constant="13.5" id="peD-EU-Xq1"/>
                         </constraints>
                     </imageView>
+                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Y7Z-aY-bXD">
+                        <rect key="frame" x="255" y="9.5" width="51" height="31"/>
+                        <connections>
+                            <action selector="switchChanged:" destination="KGk-i7-Jjw" eventType="valueChanged" id="0oa-C3-HDh"/>
+                        </connections>
+                    </switch>
                 </subviews>
                 <constraints>
                     <constraint firstItem="N3E-Lc-ZPQ" firstAttribute="centerY" secondItem="Afd-zn-dZ3" secondAttribute="centerY" id="50C-fe-A20"/>
                     <constraint firstItem="Afd-zn-dZ3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="CeX-IJ-TOC"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="Y7Z-aY-bXD" secondAttribute="trailing" id="Gxb-Ed-Ona"/>
                     <constraint firstItem="Afd-zn-dZ3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="QYL-2u-k0i"/>
                     <constraint firstAttribute="trailing" secondItem="N3E-Lc-ZPQ" secondAttribute="trailing" constant="18" id="SU4-N6-5WB"/>
                     <constraint firstAttribute="trailing" secondItem="bl2-ee-xsh" secondAttribute="trailing" constant="20" id="TuN-kf-oeQ"/>
+                    <constraint firstItem="Y7Z-aY-bXD" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="d3M-fj-Jwk"/>
                     <constraint firstAttribute="bottom" secondItem="Afd-zn-dZ3" secondAttribute="bottom" id="gGC-JQ-AIl"/>
                     <constraint firstItem="bl2-ee-xsh" firstAttribute="centerY" secondItem="Afd-zn-dZ3" secondAttribute="centerY" id="jzU-l3-ynD"/>
                 </constraints>
@@ -54,6 +62,7 @@
                 <outlet property="iconImageView" destination="bl2-ee-xsh" id="nkc-kS-23R"/>
                 <outlet property="leftTextLabel" destination="N3E-Lc-ZPQ" id="Oz1-dx-cxu"/>
                 <outlet property="titleLabel" destination="Afd-zn-dZ3" id="MXR-ne-smX"/>
+                <outlet property="valueSwitch" destination="Y7Z-aY-bXD" id="2Yp-UC-ogT"/>
             </connections>
             <point key="canvasLocation" x="139" y="80"/>
         </tableViewCell>
